// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with MLB performance type 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c2 {
  position: relative;
  cursor: pointer;
}

.c2:-webkit-autofill {
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2::-webkit-input-placeholder {
  color: #999999;
}

.c2::-moz-placeholder {
  color: #999999;
}

.c2:-ms-input-placeholder {
  color: #999999;
}

.c2::placeholder {
  color: #999999;
}

.c5 {
  position: absolute;
  width: 100%;
  top: calc(100% + 8px);
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
}

.c8 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c4 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c7 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        className="c2"
        onClick={[Function]}
      >
        <div
          className="c3"
        >
          <h4
            className="c4"
            color="#070707"
          >
            Select a Season
          </h4>
          <div
            className=""
          >
            <svg
              fill="#FFFFFF"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <div
          className="c5"
        />
      </div>
    </div>
  </div>
  <div
    className="c3"
    direction="row"
  >
    <div
      className="c6"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        10 - 1
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss
        </i>
      </p>
    </div>
    <div
      className="c9"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with MLS performance type 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c2 {
  position: relative;
  cursor: pointer;
}

.c2:-webkit-autofill {
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2::-webkit-input-placeholder {
  color: #999999;
}

.c2::-moz-placeholder {
  color: #999999;
}

.c2:-ms-input-placeholder {
  color: #999999;
}

.c2::placeholder {
  color: #999999;
}

.c5 {
  position: absolute;
  width: 100%;
  top: calc(100% + 8px);
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
}

.c8 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c4 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c7 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        className="c2"
        onClick={[Function]}
      >
        <div
          className="c3"
        >
          <h4
            className="c4"
            color="#070707"
          >
            Select a Season
          </h4>
          <div
            className=""
          >
            <svg
              fill="#FFFFFF"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <div
          className="c5"
        />
      </div>
    </div>
  </div>
  <div
    className="c3"
    direction="row"
  >
    <div
      className="c6"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        10 - 1 - 3
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss - Tie
        </i>
      </p>
    </div>
    <div
      className="c9"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with NCAAB performance type 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c2 {
  position: relative;
  cursor: pointer;
}

.c2:-webkit-autofill {
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2::-webkit-input-placeholder {
  color: #999999;
}

.c2::-moz-placeholder {
  color: #999999;
}

.c2:-ms-input-placeholder {
  color: #999999;
}

.c2::placeholder {
  color: #999999;
}

.c5 {
  position: absolute;
  width: 100%;
  top: calc(100% + 8px);
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
}

.c8 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c4 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c7 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        className="c2"
        onClick={[Function]}
      >
        <div
          className="c3"
        >
          <h4
            className="c4"
            color="#070707"
          >
            Select a Season
          </h4>
          <div
            className=""
          >
            <svg
              fill="#FFFFFF"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <div
          className="c5"
        />
      </div>
    </div>
  </div>
  <div
    className="c3"
    direction="row"
  >
    <div
      className="c6"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        10 - 1
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss
        </i>
      </p>
    </div>
    <div
      className="c9"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with NCAAF performance type 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c2 {
  position: relative;
  cursor: pointer;
}

.c2:-webkit-autofill {
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2::-webkit-input-placeholder {
  color: #999999;
}

.c2::-moz-placeholder {
  color: #999999;
}

.c2:-ms-input-placeholder {
  color: #999999;
}

.c2::placeholder {
  color: #999999;
}

.c5 {
  position: absolute;
  width: 100%;
  top: calc(100% + 8px);
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
}

.c8 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c4 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c7 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        className="c2"
        onClick={[Function]}
      >
        <div
          className="c3"
        >
          <h4
            className="c4"
            color="#070707"
          >
            Select a Season
          </h4>
          <div
            className=""
          >
            <svg
              fill="#FFFFFF"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <div
          className="c5"
        />
      </div>
    </div>
  </div>
  <div
    className="c3"
    direction="row"
  >
    <div
      className="c6"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        10 - 1
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss
        </i>
      </p>
    </div>
    <div
      className="c9"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with NFL performance type 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c2 {
  position: relative;
  cursor: pointer;
}

.c2:-webkit-autofill {
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2::-webkit-input-placeholder {
  color: #999999;
}

.c2::-moz-placeholder {
  color: #999999;
}

.c2:-ms-input-placeholder {
  color: #999999;
}

.c2::placeholder {
  color: #999999;
}

.c5 {
  position: absolute;
  width: 100%;
  top: calc(100% + 8px);
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
}

.c8 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c4 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c7 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        className="c2"
        onClick={[Function]}
      >
        <div
          className="c3"
        >
          <h4
            className="c4"
            color="#070707"
          >
            Select a Season
          </h4>
          <div
            className=""
          >
            <svg
              fill="#FFFFFF"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <div
          className="c5"
        />
      </div>
    </div>
  </div>
  <div
    className="c3"
    direction="row"
  >
    <div
      className="c6"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        10 - 1 - 3
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss - Tie
        </i>
      </p>
    </div>
    <div
      className="c9"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with toggledSidebar 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 15px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
}

.c2 {
  position: relative;
  cursor: pointer;
}

.c2:-webkit-autofill {
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2::-webkit-input-placeholder {
  color: #999999;
}

.c2::-moz-placeholder {
  color: #999999;
}

.c2:-ms-input-placeholder {
  color: #999999;
}

.c2::placeholder {
  color: #999999;
}

.c5 {
  position: absolute;
  width: 100%;
  top: calc(100% + 8px);
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
}

.c8 {
  margin: 0;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 100;
  font-family: FuturaPT,Roboto,Helvetica,sans-serif;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c0 {
  padding: 25px;
  color: #FFFFFF;
}

.c4 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  vertical-align: top;
  color: #FFFFFF;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  font-weight: bold;
}

.c7 {
  color: #0A169A;
  font-size: 22px;
  font-weight: normal;
  margin: 0;
  padding: 0;
  color: #FFFFFF;
  font-weight: bold;
}

<div
  className="c0"
>
  <div
    className="c1"
    direction="row"
  >
    <div>
      <div
        className="c2"
        onClick={[Function]}
      >
        <div
          className="c3"
        >
          <h4
            className="c4"
            color="#070707"
          >
            Select a Season
          </h4>
          <div
            className=""
          >
            <svg
              fill="#FFFFFF"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <div
          className="c5"
        />
      </div>
    </div>
  </div>
  <div
    className="c3"
    direction="row"
  >
    <div
      className="c6"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        10 - 1
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Win - Loss
        </i>
      </p>
    </div>
    <div
      className="c9"
    >
      <h3
        className="c7"
        color="#0A169A"
      >
        --
      </h3>
      <p
        className="c8"
        color="#FFFFFF"
        letterSpacing="1px"
        size="14px"
      >
        <i>
          Events Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;
